# alexa-smart-home-wifi-simple-setup-sample

./: README.md
ffs-provisionee-sdk-master/ffs_linux/: CMakeLists.txt
ffs-provisionee-sdk-master/ffs_linux/awsiot/: CMakeLists.txt
ffs-provisionee-sdk-master/ffs_linux/libffs/src/ffs/linux/: ffs_linux_workshop.c
instructions/: Task-API001.md  Task-API002.md  Task-K001.md  Task-SDK001.md  Task-SDK003.md  Troubleshooting-Keys.md  Troubleshooting-SDK.md  app-to-app-linking.md  manufacturing-keys.md  partner-cloud-smarthome-api.md  wss-c-sdk.md
smarthome-sandbox-skill/lambda/api/: index.py
smarthome-sandbox-skill/lambda/api/endpoint_cloud/: api_handler_directive.py  api_handler_endpoint.py  api_handler_event.py
smarthome-sandbox-skill/test/: sdae-test-request.json
